couple styling fixes for spans on tablets

--- a/src/css/_header.styl
+++ b/src/css/_header.styl
@@ -31,3 +31,4 @@
 
 .header-back-button
 	color $white
+	font-size 1.5rem
