--- a/src/css/_home.styl
+++ b/src/css/_home.styl
@@ -62,6 +62,11 @@
 // .home__recent-timers-li
 // 	margin-right 10px
 
+.home__recent-timers-info
+	flex 0 30%
+	font-size 1rem
+	align-self flex-start
+
 .home__recent-timers-timer-name,
 .home__recent-timers-info-timerName,
 .home__favorite-timers-timer-name
@@ -79,10 +84,6 @@
 .home__favorite-timers-timer-name-link
 	color $white
 	border-bottom 1px dotted $white
-
-.home__recent-timers-info
-	flex 0 30%
-	align-self flex-start
 
 .home__recent-timers-hide-info
 	padding 1px
