--- a/src/css/_login.styl
+++ b/src/css/_login.styl
@@ -23,12 +23,14 @@
 
 .login-create-account
 	color $blue
+	font-size 1.5rem
 	&:hover
 		text-decoration underline
 		cursor pointer
 
 .login-manual
 	color $red
+	font-size 1.5rem
 	
 .login-p
 	font-size 1.5rem
