--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -1,3 +1,7 @@
+
+span
+	font-size 1rem
+
 @require './_variables.styl'
 @require './_*.styl'
 
@@ -100,26 +104,18 @@ h4
 	@media all and (orientation landscape)
 		top $header-height-landscape
 		bottom $footer-height-landscape
-	// &:last-child
-	// 	margin-bottom 20px !important
-	
-ul
-	list-style none
-	// margin 0
-	// padding 0
-		
+				
 label
 	font-family $title
 
+
+	
+ul
+	list-style none
+
 .react-root
 	height 100vh
-	// {$flex-row-wrap}
 
-// .new-timer
-// 	{$flex-row-wrap}
-// 	// border 1px solid red
-// 	& > input
-// 		flex 0 1 50%
 		
 .form-label
 	flex 0 1 25%
@@ -148,10 +144,3 @@ label
 
 .line-across
 	border 3px solid black
-
-// a
-// 	text-decoration none
-// 	border-bottom 2px dotted $blue
-
-// input:focus
-// 	outline none !importanthidden
